Fix time spacing

--- a/Code/UI/GameHud/FreeForAllHud.razor.scss
+++ b/Code/UI/GameHud/FreeForAllHud.razor.scss
@@ -30,7 +30,7 @@ FreeForAllHud {
       align-items: center;
       justify-content: center;
       z-index: 2;
-      transform: rotate(-1deg) translateY(-10px);
+      transform: rotate(-1deg) translateY(-12px);
     }
   }
   
